--- a/index.html
+++ b/index.html
@@ -1,1 +1,161 @@
-<!DOCTYPE html><html lang="uk"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="google-site-verification" content="AS3pTU11DsjRwuy5LKmc0_WO1nd-QmU0lj0pQHFiiEk"><meta name="google-adsense-account" content="ca-pub-7670201293870640"><meta name="robots" content="index, follow"><title>Знання для всіх: Вікторини з Географії, Історії, Біблії</title><meta name="description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!"><meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, НМТ 2025, освіта"><meta property="og:title" content="Знання для всіх - Тести й Вікторини для всієї родини"><meta property="og:description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!"><meta property="og:url" content="https://www.znannia.online/"><meta property="og:image" content="https://www.znannia.online/logo.png"><meta property="og:type" content="website"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:title" content="Знання для всіх - Тести й Вікторини для всієї родини"><meta name="twitter:description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!"><meta name="twitter:image" content="https://www.znannia.online/logo.png"><link rel="canonical" href="https://www.znannia.online/"><link rel="icon" href="favicon.ico" type="image/x-icon"><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><link rel="apple-touch-icon" href="favicon.ico"><link rel="stylesheet" href="style.css"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><link rel="alternate" hreflang="uk" href="https://www.znannia.online/"><link rel="alternate" hreflang="x-default" href="https://www.znannia.online/"><script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date);gtag("config","G-SYFG3B62FV");</script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Головна","item":"https://www.znannia.online/"}]}</script></head><body><header><div class="logo"><a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" loading="lazy"></a><div class="youtube-icon"><a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a></div></div><div class="header-center"><p class="welcome-text">ВІТАЄМО НА КАНАЛІ</p><h1><a href="index.html">ЗНАННЯ ДЛЯ ВСІХ</a></h1><p class="subtitle">Тести й вікторини - для всієї родини!</p><p class="slogan">Перевірте свої знання!</p></div><div class="header-right"><div id="subscribers" class="subscribers"></div><a href="https://www.youtube.com/@ЗнанняДляВсіхТак?sub_confirmation=1" target="_blank" class="subscribe-btn">Підписатися</a></div></header><div class="divider"></div><div class="category-buttons"><a href="geography.html" class="category-btn">Географія</a><a href="history.html" class="category-btn">Історія</a><a href="bible.html" class="category-btn">Біблія</a><a href="ukraine.html" class="category-btn">Україна</a><a href="general-knowledge.html" class="category-btn">Загальні знання</a><a href="logic.html" class="category-btn">Логіка</a><a href="what-is-extra.html" class="category-btn">Що зайве</a><a href="never-lose.html" class="category-btn">Не програєш</a></div><div class="latest-videos"><h3>Останні відео</h3><p>Дивіться найновіші вікторини з географії, історії, Біблії, України та логіки. Перевірте свої знання разом із родиною!</p><div id="latest-videos"></div></div><div class="random-videos"><h3>Випадкові відео</h3><p>Спробуйте випадкові тести та дізнайтесь щось нове разом із сім'єю!</p><div id="random-videos"></div></div><footer><div class="footer-left"><div class="footer-youtube-icon"><a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a></div><p><a href="mailto:znanniadliavsikh@gmail.com">znanniadliavsikh@gmail.com</a></p></div><div class="footer-center"><button id="categories-btn" aria-expanded="false" aria-controls="categories-list">Категорії</button><ul id="categories-list" style="display:none"><li><a href="geography.html">Географія</a></li><li><a href="history.html">Історія</a></li><li><a href="bible.html">Біблія</a></li><li><a href="ukraine.html">Україна</a></li><li><a href="general-knowledge.html">Загальні знання</a></li><li><a href="logic.html">Логіка</a></li><li><a href="what-is-extra.html">Що зайве</a></li><li><a href="never-lose.html">Не програєш</a></li></ul><div class="footer-links"><a href="about.html">Про нас</a><a href="contact.html">Контакти</a><a href="collaboration.html">Співпраця</a><a href="privacy.html">Політика конфіденційності</a></div></div><div class="footer-right"><a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" class="footer-logo" loading="lazy"></a><p>© 2025 Знання для всіх</p></div></footer><script src="script.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="AS3pTU11DsjRwuy5LKmc0_WO1nd-QmU0lj0pQHFiiEk">
+  <meta name="google-adsense-account" content="ca-pub-7670201293870640">
+  <meta name="robots" content="index, follow">
+  <title>Знання для всіх: Вікторини з Географії, Історії, Біблії</title>
+  <meta name="description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!">
+  <!-- Оновлені ключові слова для ширшого SEO -->
+  <meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, НМТ 2025, освіта, освітні тести, вікторини для дітей, підготовка до НМТ">
+  <meta property="og:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
+  <meta property="og:description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!">
+  <meta property="og:url" content="https://www.znannia.online/">
+  <meta property="og:image" content="https://www.znannia.online/logo.png">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
+  <meta name="twitter:description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!">
+  <meta name="twitter:image" content="https://www.znannia.online/logo.png">
+  <link rel="canonical" href="https://www.znannia.online/">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="favicon.ico">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="alternate" hreflang="uk" href="https://www.znannia.online/">
+  <link rel="alternate" hreflang="x-default" href="https://www.znannia.online/">
+  <!-- Додано preload для швидшого завантаження -->
+  <link rel="preload" href="style.css" as="style">
+  <link rel="preload" href="logo.png" as="image">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-SYFG3B62FV');
+  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script>
+  <!-- Оновлена JSON-LD схема для E-E-A-T і SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Знання для всіх: Вікторини та Тести",
+    "description": "Тести та вікторини з географії, історії, Біблії, України, логіки та інших тем для всієї родини. Підготуйтесь до НМТ 2025 або перевірте свої знання!",
+    "url": "https://www.znannia.online/",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Знання для всіх",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.znannia.online/logo.png"
+      }
+    },
+    "breadcrumb": {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Головна",
+          "item": "https://www.znannia.online/"
+        }
+      ]
+    }
+  }
+  </script>
+</head>
+<body>
+  <!-- Додано noscript для JavaScript-залежного контенту -->
+  <noscript>
+    <p>Для перегляду відео увімкніть JavaScript або відвідайте наш <a href="https://www.youtube.com/@ЗнанняДляВсіхТак">YouTube-канал</a>.</p>
+  </noscript>
+  <!-- Додано role для доступності -->
+  <header role="banner">
+    <div class="logo">
+      <a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" loading="lazy"></a>
+      <div class="youtube-icon">
+        <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
+      </div>
+    </div>
+    <div class="header-center">
+      <p class="welcome-text">ВІТАЄМО НА КАНАЛІ</p>
+      <h1><a href="index.html">ЗНАННЯ ДЛЯ ВСІХ</a></h1>
+      <p class="subtitle">Тести й вікторини - для всієї родини!</p>
+      <p class="slogan">Перевірте свої знання!</p>
+    </div>
+    <div class="header-right">
+      <div id="subscribers" class="subscribers"></div>
+      <a href="https://www.youtube.com/@ЗнанняДляВсіхТак?sub_confirmation=1" target="_blank" class="subscribe-btn">Підписатися</a>
+    </div>
+  </header>
+  <div class="divider"></div>
+  <!-- Додано унікальний текстовий контент для AdSense -->
+  <div class="intro-text">
+    <h2>Ласкаво просимо до Знання для всіх!</h2>
+    <p>Наш освітній портал пропонує захопливі вікторини та тести з географії, історії, Біблії, України, логіки та багатьох інших тем для всієї родини. Ми прагнемо зробити навчання цікавим і доступним, допомагаючи вам готуватися до НМТ 2025, розвивати ерудицію або просто весело проводити час. Усі наші відео створені командою педагогів і контент-креаторів із багаторічним досвідом, а тести відповідають освітнім стандартам. Обирайте категорію, перевіряйте свої знання та дізнавайтесь щось нове щодня! Наші вікторини підходять для дітей, студентів і дорослих, а зручний інтерфейс дозволяє легко знайти улюблені теми. Приєднуйтесь до тисяч користувачів, які вже відкрили для себе радість навчання разом із Знання для всіх!</p>
+  </div>
+  <div class="category-buttons">
+    <a href="geography.html" class="category-btn">Географія</a>
+    <a href="history.html" class="category-btn">Історія</a>
+    <a href="bible.html" class="category-btn">Біблія</a>
+    <a href="ukraine.html" class="category-btn">Україна</a>
+    <a href="general-knowledge.html" class="category-btn">Загальні знання</a>
+    <a href="logic.html" class="category-btn">Логіка</a>
+    <a href="what-is-extra.html" class="category-btn">Що зайве</a>
+    <a href="never-lose.html" class="category-btn">Не програєш</a>
+    <!-- Додано посилання на статті -->
+    <a href="articles.html" class="category-btn">Статті</a>
+  </div>
+  <div class="latest-videos">
+    <h3>Останні відео</h3>
+    <!-- Оновлений опис -->
+    <p>Перегляньте найновіші вікторини з географії, історії, Біблії, України, логіки та інших тем. Наші тести створені, щоб допомогти вам навчатися граючи!</p>
+    <div id="latest-videos"></div>
+  </div>
+  <div class="random-videos">
+    <h3>Випадкові відео</h3>
+    <!-- Оновлений опис -->
+    <p>Спробуйте випадкові тести, щоб відкрити нові теми та перевірити свою ерудицію разом із родиною!</p>
+    <div id="random-videos"></div>
+  </div>
+  <!-- Додано role для доступності -->
+  <footer role="contentinfo">
+    <div class="footer-left">
+      <div class="footer-youtube-icon">
+        <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
+      </div>
+      <p><a href="mailto:znanniadliavsikh@gmail.com">znanniadliavsikh@gmail.com</a></p>
+    </div>
+    <div class="footer-center">
+      <button id="categories-btn" aria-expanded="false" aria-controls="categories-list">Категорії</button>
+      <ul id="categories-list" style="display:none">
+        <li><a href="geography.html">Географія</a></li>
+        <li><a href="history.html">Історія</a></li>
+        <li><a href="bible.html">Біблія</a></li>
+        <li><a href="ukraine.html">Україна</a></li>
+        <li><a href="general-knowledge.html">Загальні знання</a></li>
+        <li><a href="logic.html">Логіка</a></li>
+        <li><a href="what-is-extra.html">Що зайве</a></li>
+        <li><a href="never-lose.html">Не програєш</a></li>
+        <!-- Додано статтю до футера -->
+        <li><a href="articles.html">Статті</a></li>
+      </ul>
+      <div class="footer-links">
+        <a href="about.html">Про нас</a>
+        <a href="contact.html">Контакти</a>
+        <a href="collaboration.html">Співпраця</a>
+        <a href="privacy.html">Політика конфіденційності</a>
+      </div>
+    </div>
+    <div class="footer-right">
+      <a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" class="footer-logo" loading="lazy"></a>
+      <p>© 2025 Знання для всіх</p>
+    </div>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
