--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="robots" content="index, follow">
   <title>Знання для всіх: Вікторини з Географії, Історії, Біблії</title>
-  <meta name="description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!">
-  <!-- Оновлені ключові слова для ширшого SEO -->
-  <meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, НМТ 2025, освіта, освітні тести, вікторини для дітей, підготовка до НМТ">
+  <meta name="description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
+  <!-- Оновлені ключові слова -->
+  <meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, освіта, розваги для родини, пізнання світу, цікаві факти">
   <meta property="og:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
-  <meta property="og:description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!">
+  <meta property="og:description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
   <meta property="og:url" content="https://www.znannia.online/">
   <meta property="og:image" content="https://www.znannia.online/logo.png">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
-  <meta name="twitter:description" content="Тести та вікторини з географії, історії, Біблії, України та логіки для всієї родини. Дивіться останні та випадкові відео з YouTube-каналу Знання для всіх!">
+  <meta name="twitter:description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
   <meta name="twitter:image" content="https://www.znannia.online/logo.png">
   <link rel="canonical" href="https://www.znannia.online/">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -27,7 +27,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="alternate" hreflang="uk" href="https://www.znannia.online/">
   <link rel="alternate" hreflang="x-default" href="https://www.znannia.online/">
-  <!-- Додано preload для швидшого завантаження -->
+  <!-- Додано preload -->
   <link rel="preload" href="style.css" as="style">
   <link rel="preload" href="logo.png" as="image">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
@@ -38,13 +38,13 @@
     gtag('config', 'G-SYFG3B62FV');
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script>
-  <!-- Оновлена JSON-LD схема для E-E-A-T і SEO -->
+  <!-- Оновлена JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Знання для всіх: Вікторини та Тести",
-    "description": "Тести та вікторини з географії, історії, Біблії, України, логіки та інших тем для всієї родини. Підготуйтесь до НМТ 2025 або перевірте свої знання!",
+    "description": "Унікальні тести та вікторини з географії, історії, Біблії, України, логіки для родини та друзів. Пізнавайте світ через розваги разом із Знання для всіх!",
     "url": "https://www.znannia.online/",
     "publisher": {
       "@type": "Organization",
@@ -69,11 +69,11 @@
   </script>
 </head>
 <body>
-  <!-- Додано noscript для JavaScript-залежного контенту -->
+  <!-- Додано noscript -->
   <noscript>
     <p>Для перегляду відео увімкніть JavaScript або відвідайте наш <a href="https://www.youtube.com/@ЗнанняДляВсіхТак">YouTube-канал</a>.</p>
   </noscript>
-  <!-- Додано role для доступності -->
+  <!-- Гедер без змін -->
   <header role="banner">
     <div class="logo">
       <a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" loading="lazy"></a>
@@ -93,11 +93,6 @@
     </div>
   </header>
   <div class="divider"></div>
-  <!-- Додано унікальний текстовий контент для AdSense -->
-  <div class="intro-text">
-    <h2>Ласкаво просимо до Знання для всіх!</h2>
-    <p>Наш освітній портал пропонує захопливі вікторини та тести з географії, історії, Біблії, України, логіки та багатьох інших тем для всієї родини. Ми прагнемо зробити навчання цікавим і доступним, допомагаючи вам готуватися до НМТ 2025, розвивати ерудицію або просто весело проводити час. Усі наші відео створені командою педагогів і контент-креаторів із багаторічним досвідом, а тести відповідають освітнім стандартам. Обирайте категорію, перевіряйте свої знання та дізнавайтесь щось нове щодня! Наші вікторини підходять для дітей, студентів і дорослих, а зручний інтерфейс дозволяє легко знайти улюблені теми. Приєднуйтесь до тисяч користувачів, які вже відкрили для себе радість навчання разом із Знання для всіх!</p>
-  </div>
   <div class="category-buttons">
     <a href="geography.html" class="category-btn">Географія</a>
     <a href="history.html" class="category-btn">Історія</a>
@@ -107,22 +102,52 @@
     <a href="logic.html" class="category-btn">Логіка</a>
     <a href="what-is-extra.html" class="category-btn">Що зайве</a>
     <a href="never-lose.html" class="category-btn">Не програєш</a>
-    <!-- Додано посилання на статті -->
-    <a href="articles.html" class="category-btn">Статті</a>
   </div>
   <div class="latest-videos">
     <h3>Останні відео</h3>
-    <!-- Оновлений опис -->
-    <p>Перегляньте найновіші вікторини з географії, історії, Біблії, України, логіки та інших тем. Наші тести створені, щоб допомогти вам навчатися граючи!</p>
+    <p>Перегляньте найновіші вікторини з географії, історії, Біблії, України та логіки, щоб весело провести час із родиною!</p>
     <div id="latest-videos"></div>
+  </div>
+  <!-- Додано розділ Цікаві факти -->
+  <div class="facts-section">
+    <h3><a href="facts.html">Цікаві факти</a></h3>
+    <p>Дізнайтесь захопливі факти про світ, історію, культуру та науку через наші статті!</p>
+    <div id="facts-list">
+      <!-- Приклад статті -->
+      <div class="fact-item">
+        <a href="facts.html#world-wonders" class="fact-link">
+          <img src="https://via.placeholder.com/300x169" alt="7 чудес світу" class="thumbnail" loading="lazy">
+          <h4>7 чудес світу: що ви про них знаєте?</h4>
+        </a>
+        <div class="fact-lead" style="display:none">
+          <p>Від пірамід Гізи до Колізею — дізнайтесь історію семи чудес світу та їх значення для людства.</p>
+        </div>
+        <button class="more-btn">Більше</button>
+      </div>
+      <!-- Додайте ще 2-3 статті -->
+      <div class="fact-item">
+        <a href="facts.html#ukraine-traditions" class="fact-link">
+          <img src="https://via.placeholder.com/300x169" alt="Традиції України" class="thumbnail" loading="lazy">
+          <h4>Традиції України: від минулого до сьогодення</h4>
+        </a>
+        <div class="fact-lead" style="display:none">
+          <p>Поглибте знання про українські традиції, від вишиванок до святкових обрядів.</p>
+        </div>
+        <button class="more-btn">Більше</button>
+      </div>
+    </div>
   </div>
   <div class="random-videos">
     <h3>Випадкові відео</h3>
-    <!-- Оновлений опис -->
-    <p>Спробуйте випадкові тести, щоб відкрити нові теми та перевірити свою ерудицію разом із родиною!</p>
+    <p>Спробуйте випадкові тести, щоб відкрити нові теми та весело провести час із друзями!</p>
     <div id="random-videos"></div>
   </div>
-  <!-- Додано role для доступності -->
+  <!-- Додано опис над футером -->
+  <div class="intro-text">
+    <h2>Знання для всіх — пізнавайте світ із радістю!</h2>
+    <p>Ласкаво просимо до унікального освітнього порталу "Знання для всіх"! Наші захопливі вікторини та тести з географії, історії, Біблії, України, логіки та інших тем створені, щоб об’єднувати родини та друзів у веселому пізнанні світу. Ми пропонуємо розважальний контент, який допомагає дізнаватися нове, розвивати ерудицію та проводити час із користю. Усі відео та статті створені нашою командою контент-креаторів, які прагнуть зробити навчання цікавим і доступним. Обирайте улюблену категорію чи статтю, занурюйтесь у світ знань і насолоджуйтесь розвагами разом із близькими! Приєднуйтесь до тисяч користувачів, які відкривають радість навчання з нами.</p>
+  </div>
+  <!-- Футер без змін -->
   <footer role="contentinfo">
     <div class="footer-left">
       <div class="footer-youtube-icon">
@@ -141,8 +166,7 @@
         <li><a href="logic.html">Логіка</a></li>
         <li><a href="what-is-extra.html">Що зайве</a></li>
         <li><a href="never-lose.html">Не програєш</a></li>
-        <!-- Додано статтю до футера -->
-        <li><a href="articles.html">Статті</a></li>
+        <li><a href="facts.html">Цікаві факти</a></li>
       </ul>
       <div class="footer-links">
         <a href="about.html">Про нас</a>
