--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="robots" content="index, follow">
   <title>Знання для всіх: Вікторини з Географії, Історії, Біблії</title>
   <meta name="description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
-  <!-- Оновлені ключові слова -->
   <meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, освіта, розваги для родини, пізнання світу, цікаві факти">
   <meta property="og:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
   <meta property="og:description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
@@ -27,7 +26,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="alternate" hreflang="uk" href="https://www.znannia.online/">
   <link rel="alternate" hreflang="x-default" href="https://www.znannia.online/">
-  <!-- Додано preload -->
   <link rel="preload" href="style.css" as="style">
   <link rel="preload" href="logo.png" as="image">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
@@ -38,7 +36,6 @@
     gtag('config', 'G-SYFG3B62FV');
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script>
-  <!-- Оновлена JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -69,11 +66,9 @@
   </script>
 </head>
 <body>
-  <!-- Додано noscript -->
   <noscript>
     <p>Для перегляду відео увімкніть JavaScript або відвідайте наш <a href="https://www.youtube.com/@ЗнанняДляВсіхТак">YouTube-канал</a>.</p>
   </noscript>
-  <!-- Гедер без змін -->
   <header role="banner">
     <div class="logo">
       <a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" loading="lazy"></a>
@@ -108,12 +103,10 @@
     <p>Перегляньте найновіші вікторини з географії, історії, Біблії, України та логіки, щоб весело провести час із родиною!</p>
     <div id="latest-videos"></div>
   </div>
-  <!-- Додано розділ Цікаві факти -->
   <div class="facts-section">
     <h3><a href="facts.html">Цікаві факти</a></h3>
     <p>Дізнайтесь захопливі факти про світ, історію, культуру та науку через наші статті!</p>
     <div id="facts-list">
-      <!-- Приклад статті -->
       <div class="fact-item">
         <a href="facts.html#world-wonders" class="fact-link">
           <img src="https://via.placeholder.com/300x169" alt="7 чудес світу" class="thumbnail" loading="lazy">
@@ -124,7 +117,6 @@
         </div>
         <button class="more-btn">Більше</button>
       </div>
-      <!-- Додайте ще 2-3 статті -->
       <div class="fact-item">
         <a href="facts.html#ukraine-traditions" class="fact-link">
           <img src="https://via.placeholder.com/300x169" alt="Традиції України" class="thumbnail" loading="lazy">
@@ -135,6 +127,16 @@
         </div>
         <button class="more-btn">Більше</button>
       </div>
+      <div class="fact-item">
+        <a href="facts.html#space-facts" class="fact-link">
+          <img src="https://via.placeholder.com/300x169" alt="Факти про космос" class="thumbnail" loading="lazy">
+          <h4>5 дивовижних фактів про космос</h4>
+        </a>
+        <div class="fact-lead" style="display:none">
+          <p>Чорні діри, зірки та галактики — відкрийте таємниці космосу через захопливі факти.</p>
+        </div>
+        <button class="more-btn">Більше</button>
+      </div>
     </div>
   </div>
   <div class="random-videos">
@@ -142,12 +144,10 @@
     <p>Спробуйте випадкові тести, щоб відкрити нові теми та весело провести час із друзями!</p>
     <div id="random-videos"></div>
   </div>
-  <!-- Додано опис над футером -->
   <div class="intro-text">
     <h2>Знання для всіх — пізнавайте світ із радістю!</h2>
     <p>Ласкаво просимо до унікального освітнього порталу "Знання для всіх"! Наші захопливі вікторини та тести з географії, історії, Біблії, України, логіки та інших тем створені, щоб об’єднувати родини та друзів у веселому пізнанні світу. Ми пропонуємо розважальний контент, який допомагає дізнаватися нове, розвивати ерудицію та проводити час із користю. Усі відео та статті створені нашою командою контент-креаторів, які прагнуть зробити навчання цікавим і доступним. Обирайте улюблену категорію чи статтю, занурюйтесь у світ знань і насолоджуйтесь розвагами разом із близькими! Приєднуйтесь до тисяч користувачів, які відкривають радість навчання з нами.</p>
   </div>
-  <!-- Футер без змін -->
   <footer role="contentinfo">
     <div class="footer-left">
       <div class="footer-youtube-icon">
