--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow">
   <title>Знання для всіх: Вікторини з Географії, Історії, Біблії</title>
   <meta name="description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
-  <meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, освіта, розваги для родини, пізнання світу, цікаві факти">
+  <meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, освіта, розваги для родини, цікаві факти">
   <meta property="og:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
   <meta property="og:description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
   <meta property="og:url" content="https://www.znannia.online/">
@@ -20,8 +20,6 @@
   <meta name="twitter:image" content="https://www.znannia.online/logo.png">
   <link rel="canonical" href="https://www.znannia.online/">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="alternate" hreflang="uk" href="https://www.znannia.online/">
@@ -46,21 +44,11 @@
     "publisher": {
       "@type": "Organization",
       "name": "Знання для всіх",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://www.znannia.online/logo.png"
-      }
+      "logo": { "@type": "ImageObject", "url": "https://www.znannia.online/logo.png" }
     },
     "breadcrumb": {
       "@type": "BreadcrumbList",
-      "itemListElement": [
-        {
-          "@type": "ListItem",
-          "position": 1,
-          "name": "Головна",
-          "item": "https://www.znannia.online/"
-        }
-      ]
+      "itemListElement": [{ "@type": "ListItem", "position": 1, "name": "Головна", "item": "https://www.znannia.online/" }]
     }
   }
   </script>
@@ -108,8 +96,8 @@
     <p>Дізнайтесь захопливі факти про світ, історію, культуру та науку через наші статті!</p>
     <div id="facts-list">
       <div class="fact-item">
-        <a href="facts.html#world-wonders" class="fact-link">
-          <img src="https://via.placeholder.com/300x169" alt="7 чудес світу" class="thumbnail" loading="lazy">
+        <a href="facts/world-wonders.html" class="fact-link">
+          <img src="facts/images/world-wonders.jpg" alt="7 чудес світу" class="thumbnail" loading="lazy">
           <h4>7 чудес світу: що ви про них знаєте?</h4>
         </a>
         <div class="fact-lead" style="display:none">
@@ -118,8 +106,8 @@
         <button class="more-btn">Більше</button>
       </div>
       <div class="fact-item">
-        <a href="facts.html#ukraine-traditions" class="fact-link">
-          <img src="https://via.placeholder.com/300x169" alt="Традиції України" class="thumbnail" loading="lazy">
+        <a href="facts/ukraine-traditions.html" class="fact-link">
+          <img src="facts/images/ukraine-traditions.jpg" alt="Традиції України" class="thumbnail" loading="lazy">
           <h4>Традиції України: від минулого до сьогодення</h4>
         </a>
         <div class="fact-lead" style="display:none">
@@ -128,8 +116,8 @@
         <button class="more-btn">Більше</button>
       </div>
       <div class="fact-item">
-        <a href="facts.html#space-facts" class="fact-link">
-          <img src="https://via.placeholder.com/300x169" alt="Факти про космос" class="thumbnail" loading="lazy">
+        <a href="facts/space-facts.html" class="fact-link">
+          <img src="facts/images/space-facts.jpg" alt="Факти про космос" class="thumbnail" loading="lazy">
           <h4>5 дивовижних фактів про космос</h4>
         </a>
         <div class="fact-lead" style="display:none">
@@ -146,7 +134,8 @@
   </div>
   <div class="intro-text">
     <h2>Знання для всіх — пізнавайте світ із радістю!</h2>
-    <p>Ласкаво просимо до унікального освітнього порталу "Знання для всіх"! Наші захопливі вікторини та тести з географії, історії, Біблії, України, логіки та інших тем створені, щоб об’єднувати родини та друзів у веселому пізнанні світу. Ми пропонуємо розважальний контент, який допомагає дізнаватися нове, розвивати ерудицію та проводити час із користю. Усі відео та статті створені нашою командою контент-креаторів, які прагнуть зробити навчання цікавим і доступним. Обирайте улюблену категорію чи статтю, занурюйтесь у світ знань і насолоджуйтесь розвагами разом із близькими! Приєднуйтесь до тисяч користувачів, які відкривають радість навчання з нами.</p>
+    <p>Ласкаво просимо до унікального освітнього порталу "Знання для всіх"! Наші захопливі вікторини та тести з географії, історії, Біблії, України, логіки та інших тем створені, щоб об’єднувати родини та друзів у веселому пізнанні світу. Ми пропонуємо розважальний контент, який допомагає дізнаватися нове, розвивати ерудицію та проводити час із користю.</p>
+    <p class="extended-text">Усі відео та статті створені нашою командою контент-креаторів, які прагнуть зробити навчання цікавим і доступним. Обирайте улюблену категорію чи статтю, занурюйтесь у світ знань і насолоджуйтесь розвагами разом із близькими! Приєднуйтесь до тисяч користувачів, які відкривають радість навчання з нами. Дізнайтесь більше про культуру, історію, науку та Україну через наші унікальні тести та статті в розділі <a href="facts.html">Цікаві факти</a>.</p>
   </div>
   <footer role="contentinfo">
     <div class="footer-left">
