--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div class="intro-text">
     <h2>Знання для всіх — пізнавайте світ із радістю!</h2>
     <p>Ласкаво просимо до унікального освітнього порталу "Знання для всіх"! Наші захопливі вікторини та тести з географії, історії, Біблії, України, логіки та інших тем створені, щоб об’єднувати родини та друзів у веселому пізнанні світу. Ми пропонуємо розважальний контент, який допомагає дізнаватися нове, розвивати ерудицію та проводити час із користю.</p>
-    <p class="extended-text">Усі відео та статті створені нашою командою контент-креаторів, які прагнуть зробити навчання цікавим і доступним. Обирайте улюблену категорію чи статтю, занурюйтесь у світ знань і насолоджуйтесь розвагами разом із близькими! Приєднуйтесь до тисяч користувачів, які відкривають радість навчання з нами. Дізнайтесь більше про культуру, історію, науку та Україну через наші унікальні тести та статті в розділі <a href="facts.html">Цікаві факти</a>.</p>
+    <p class="extended-text">Усі відео та статті створені нашою командою контент-креаторів, які прагнуть зробити навчання цікавим і доступним. Обирайте улюблену категорію чи статтю, занурюйтесь у світ знань і насолоджуйтесь розвагами разом із близькими! Приєднуйтесь до тисяч користувачів, які відкривають радість навчання з нами. Дізнайтесь більше про культуру, історію, науку та Україну через наші унікальні тести та статті в розділі <a href="facts.html" style="color: #ffcc00;">Цікаві факти</a>.</p>
   </div>
   <footer role="contentinfo">
     <div class="footer-left">
