--- a/facts.html
+++ b/facts.html
@@ -37,11 +37,33 @@
 </head>
 <body>
   <header role="banner">
-    <!-- Вставте ваш гедер з index.html -->
+    <div class="logo">
+      <a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" loading="lazy"></a>
+      <div class="youtube-icon">
+        <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
+      </div>
+    </div>
+    <div class="header-center">
+      <p class="welcome-text">ВІТАЄМО НА КАНАЛІ</p>
+      <h1><a href="index.html">ЗНАННЯ ДЛЯ ВСІХ</a></h1>
+      <p class="subtitle">Тести й вікторини - для всієї родини!</p>
+      <p class="slogan">Перевірте свої знання!</p>
+    </div>
+    <div class="header-right">
+      <div id="subscribers" class="subscribers"></div>
+      <a href="https://www.youtube.com/@ЗнанняДляВсіхТак?sub_confirmation=1" target="_blank" class="subscribe-btn">Підписатися</a>
+    </div>
   </header>
   <div class="divider"></div>
   <div class="category-buttons">
-    <!-- Вставте кнопки категорій з index.html -->
+    <a href="geography.html" class="category-btn">Географія</a>
+    <a href="history.html" class="category-btn">Історія</a>
+    <a href="bible.html" class="category-btn">Біблія</a>
+    <a href="ukraine.html" class="category-btn">Україна</a>
+    <a href="general-knowledge.html" class="category-btn">Загальні знання</a>
+    <a href="logic.html" class="category-btn">Логіка</a>
+    <a href="what-is-extra.html" class="category-btn">Що зайве</a>
+    <a href="never-lose.html" class="category-btn">Не програєш</a>
   </div>
   <div class="facts">
     <h2>Цікаві факти</h2>
@@ -59,11 +81,39 @@
         </div>
         <button class="more-btn">Більше</button>
       </div>
-      <!-- Додайте нові прев’ю тут -->
     </div>
   </div>
   <footer role="contentinfo">
-    <!-- Вставте ваш футер з index.html -->
+    <div class="footer-left">
+      <div class="footer-youtube-icon">
+        <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
+      </div>
+      <p><a href="mailto:znanniadliavsikh@gmail.com">znanniadliavsikh@gmail.com</a></p>
+    </div>
+    <div class="footer-center">
+      <button id="categories-btn" aria-expanded="false" aria-controls="categories-list">Категорії</button>
+      <ul id="categories-list" style="display:none">
+        <li><a href="geography.html">Географія</a></li>
+        <li><a href="history.html">Історія</a></li>
+        <li><a href="bible.html">Біблія</a></li>
+        <li><a href="ukraine.html">Україна</a></li>
+        <li><a href="general-knowledge.html">Загальні знання</a></li>
+        <li><a href="logic.html">Логіка</a></li>
+        <li><a href="what-is-extra.html">Що зайве</a></li>
+        <li><a href="never-lose.html">Не програєш</a></li>
+        <li><a href="facts.html">Цікаві факти</a></li>
+      </ul>
+      <div class="footer-links">
+        <a href="about.html">Про нас</a>
+        <a href="contact.html">Контакти</a>
+        <a href="collaboration.html">Співпраця</a>
+        <a href="privacy.html">Політика конфіденційності</a>
+      </div>
+    </div>
+    <div class="footer-right">
+      <a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" class="footer-logo" loading="lazy"></a>
+      <p>© 2025 Знання для всіх</p>
+    </div>
   </footer>
   <script src="script.js"></script>
 </body>
