--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
   <meta name="keywords" content="вікторини, тести, географія, історія, Біблія, Україна, логіка, знання для всіх, YouTube, освіта, розваги для родини, цікаві факти">
   <meta property="og:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
   <meta property="og:description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
-  <meta property="og:url" content="https://www.znannia.online/">
-  <meta property="og:image" content="https://www.znannia.online/logo.png">
+  <meta property="og:url" content="https://znannia.github.io/test/">
+  <meta property="og:image" content="https://znannia.github.io/test/logo.png">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Знання для всіх - Тести й Вікторини для всієї родини">
   <meta name="twitter:description" content="Унікальні тести та вікторини з географії, історії, Біблії, України та логіки для родини та друзів. Пізнавайте світ через розваги з YouTube-каналом Знання для всіх!">
-  <meta name="twitter:image" content="https://www.znannia.online/logo.png">
-  <link rel="canonical" href="https://www.znannia.online/">
+  <meta name="twitter:image" content="https://znannia.github.io/test/logo.png">
+  <link rel="canonical" href="https://znannia.github.io/test/">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="alternate" hreflang="uk" href="https://www.znannia.online/">
-  <link rel="alternate" hreflang="x-default" href="https://www.znannia.online/">
+  <link rel="alternate" hreflang="uk" href="https://znannia.github.io/test/">
+  <link rel="alternate" hreflang="x-default" href="https://znannia.github.io/test/">
   <link rel="preload" href="style.css" as="style">
   <link rel="preload" href="logo.png" as="image">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
@@ -40,15 +40,15 @@
     "@type": "WebPage",
     "name": "Знання для всіх: Вікторини та Тести",
     "description": "Унікальні тести та вікторини з географії, історії, Біблії, України, логіки для родини та друзів. Пізнавайте світ через розваги разом із Знання для всіх!",
-    "url": "https://www.znannia.online/",
+    "url": "https://znannia.github.io/test/",
     "publisher": {
       "@type": "Organization",
       "name": "Знання для всіх",
-      "logo": { "@type": "ImageObject", "url": "https://www.znannia.online/logo.png" }
+      "logo": { "@type": "ImageObject", "url": "https://znannia.github.io/test/logo.png" }
     },
     "breadcrumb": {
       "@type": "BreadcrumbList",
-      "itemListElement": [{ "@type": "ListItem", "position": 1, "name": "Головна", "item": "https://www.znannia.online/" }]
+      "itemListElement": [{ "@type": "ListItem", "position": 1, "name": "Головна", "item": "https://znannia.github.io/test/" }]
     }
   }
   </script>
@@ -94,38 +94,7 @@
   <div class="facts-section">
     <h3><a href="facts.html">Цікаві факти</a></h3>
     <p>Дізнайтесь захопливі факти про світ, історію, культуру та науку через наші статті!</p>
-    <div id="facts-list">
-      <div class="fact-item">
-        <a href="facts/world-wonders.html" class="fact-link">
-          <img src="facts/images/world-wonders.jpg" alt="7 чудес світу" class="thumbnail" loading="lazy">
-          <h4>7 чудес світу: що ви про них знаєте?</h4>
-        </a>
-        <div class="fact-lead" style="display:none">
-          <p>Від пірамід Гізи до Колізею — дізнайтесь історію семи чудес світу та їх значення для людства.</p>
-        </div>
-        <button class="more-btn">Більше</button>
-      </div>
-      <div class="fact-item">
-        <a href="facts/ukraine-traditions.html" class="fact-link">
-          <img src="facts/images/ukraine-traditions.jpg" alt="Традиції України" class="thumbnail" loading="lazy">
-          <h4>Традиції України: від минулого до сьогодення</h4>
-        </a>
-        <div class="fact-lead" style="display:none">
-          <p>Поглибте знання про українські традиції, від вишиванок до святкових обрядів.</p>
-        </div>
-        <button class="more-btn">Більше</button>
-      </div>
-      <div class="fact-item">
-        <a href="facts/space-facts.html" class="fact-link">
-          <img src="facts/images/space-facts.jpg" alt="Факти про космос" class="thumbnail" loading="lazy">
-          <h4>5 дивовижних фактів про космос</h4>
-        </a>
-        <div class="fact-lead" style="display:none">
-          <p>Чорні діри, зірки та галактики — відкрийте таємниці космосу через захопливі факти.</p>
-        </div>
-        <button class="more-btn">Більше</button>
-      </div>
-    </div>
+    <div id="facts-list"></div>
   </div>
   <div class="random-videos">
     <h3>Випадкові відео</h3>
