--- a/category.html
+++ b/category.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Дивіться вікторини та тести з різних категорій на YouTube-каналі Знання для всіх. Цікаво для всієї родини!">
   <meta name="keywords" content="знання для всіх, вікторини, тести, освіта, Україна, НМТ 2025">
