--- a/collaboration.html
+++ b/collaboration.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Дізнайтесь, як співпрацювати з проєктом Знання для всіх. Ми відкриті до партнерства та нових ідей!">
   <meta name="keywords" content="співпраця, знання для всіх, вікторини, освіта, YouTube">
