--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Зв'яжіться з командою Знання для всіх. Ми відкриті до співпраці та ваших пропозицій!">
   <meta name="keywords" content="контакти, знання для всіх, вікторини, освіта, YouTube">
