--- a/logic.html
+++ b/logic.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Перевірте свою кмітливість із тестами на логіку разом із сім’єю! Ці загадки — чудовий спосіб потренувати розум і весело провести час. Спробуйте зараз!">
   <meta name="keywords" content="логіка, вікторини, знання для всіх, освіта, Україна, НМТ 2025">
