--- a/never-lose.html
+++ b/never-lose.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Готові до сміху та веселощів? Вікторини 'Не програєш' із несподіваними питаннями ідеальні для гри з друзями чи родиною. Спробуйте зараз!">
   <meta name="keywords" content="не програєш, вікторини, знання для всіх, освіта, Україна, НМТ 2025">
