--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Ознайомтесь з політикою конфіденційності проєкту Знання для всіх. Дізнайтесь, як ми захищаємо ваші дані та використовуємо аналітику для покращення контенту.">
   <meta name="keywords" content="політика конфіденційності, знання для всіх, вікторини, освіта, Україна">
