--- a/ukraine.html
+++ b/ukraine.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Поглибте знання про Україну з тестами про її історію, культуру та традиції разом із родиною! Дізнайтесь більше про видатних постатей і ключові події.">
   <meta name="keywords" content="Україна, вікторини, знання для всіх, освіта, Україна, НМТ 2025">
