--- a/what-is-extra.html
+++ b/what-is-extra.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
+     crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="description" content="Потренуйте мозок із тестами на пошук зайвого чи подібного разом із родиною! Ці завдання розвивають концентрацію, увагу та логічне мислення.">
   <meta name="keywords" content="що зайве, вікторини, знання для всіх, освіта, Україна, НМТ 2025">
