--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
     <div id="latest-videos"></div>
   </div>
   <div class="facts-section">
-    <h3>Цікаві факти</h3>
+    <h3><a href="facts.html">Цікаві факти</a></h3>
     <p>Дізнайтесь захопливі факти про світ, історію, культуру та науку через наші статті!</p>
     <div id="facts-list"></div>
-    <button class="load-more-btn" id="load-more-facts">Завантажити ще</button>
   </div>
   <div class="random-videos">
     <h3>Випадкові відео</h3>
