--- a/facts.html
+++ b/facts.html
@@ -3,31 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
-     crossorigin="anonymous"></script>
-  <meta name="google-site-verification" content="AS3pTU11DsjRwuy5LKmc0_WO1nd-QmU0lj0pQHFiiEk">
-  <meta name="google-adsense-account" content="ca-pub-7670201293870640">
-  <meta name="robots" content="index, follow">
   <title>Цікаві факти - Знання для всіх</title>
-  <meta name="description" content="Захопливі факти про світ, історію, культуру та науку для родини та друзів.">
-  <meta name="keywords" content="цікаві факти, знання для всіх, освіта, розваги">
+  <meta name="description" content="Дізнайтесь захопливі факти про світ, історію, культуру, науку та Біблію через наші статті на порталі Знання для всіх!">
+  <meta name="keywords" content="цікаві факти, знання для всіх, статті, географія, історія, Біблія, Україна, океани">
   <meta property="og:title" content="Цікаві факти - Знання для всіх">
-  <meta property="og:description" content="Захопливі факти про світ, історію, культуру та науку для родини та друзів.">
-  <meta property="og:url" content="https://www.znannia.online/facts.html">
-  <meta property="og:image" content="https://www.znannia.online/logo.png">
+  <meta property="og:description" content="Захопливі статті про сім чудес, Ватикан, жінок Біблії, океани та багато іншого. Пізнавайте світ із Знання для всіх!">
+  <meta property="og:url" content="https://znannia.github.io/test/facts.html">
+  <meta property="og:image" content="https://znannia.github.io/test/logo.png">
   <meta property="og:type" content="website">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Цікаві факти - Знання для всіх">
-  <meta name="twitter:description" content="Захопливі факти про світ, історію, культуру та науку для родини та друзів.">
-  <meta name="twitter:image" content="https://www.znannia.online/logo.png">
-  <link rel="canonical" href="https://www.znannia.online/facts.html">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="alternate" hreflang="uk" href="https://www.znannia.online/facts.html">
-  <link rel="alternate" hreflang="x-default" href="https://www.znannia.online/facts.html">
-  <link rel="preload" href="style.css" as="style">
-  <link rel="preload" href="logo.png" as="image">
+  <link rel="canonical" href="https://znannia.github.io/test/facts.html">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -35,7 +20,6 @@
     gtag('js', new Date());
     gtag('config', 'G-SYFG3B62FV');
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script>
 </head>
 <body>
   <header role="banner">
@@ -57,33 +41,10 @@
     </div>
   </header>
   <div class="divider"></div>
-  <div class="category-buttons">
-    <a href="geography.html" class="category-btn">Географія</a>
-    <a href="history.html" class="category-btn">Історія</a>
-    <a href="bible.html" class="category-btn">Біблія</a>
-    <a href="ukraine.html" class="category-btn">Україна</a>
-    <a href="general-knowledge.html" class="category-btn">Загальні знання</a>
-    <a href="logic.html" class="category-btn">Логіка</a>
-    <a href="what-is-extra.html" class="category-btn">Що зайве</a>
-    <a href="never-lose.html" class="category-btn">Не програєш</a>
-  </div>
   <div class="facts">
     <h2>Цікаві факти</h2>
-    <div class="facts-text">
-      <p>Ласкаво просимо до розділу "Цікаві факти"! Читайте статті та відкривайте світ разом із нами! Перегляньте наші <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank">вікторини на YouTube</a>.</p>
-    </div>
-    <div id="facts-list">
-      <div class="fact-item">
-        <a href="facts/articles/world-wonders.html" class="fact-link">
-          <img src="facts/images/world-wonders.jpg" alt="7 чудес світу" class="thumbnail" loading="lazy">
-          <h4>7 чудес світу: що ви про них знаєте?</h4>
-        </a>
-        <div class="fact-lead" style="display:none">
-          <p>Від пірамід Гізи до Колізею — дізнайтесь історію семи чудес світу.</p>
-        </div>
-        <button class="more-btn">Більше</button>
-      </div>
-    </div>
+    <p>Дізнайтесь захопливі факти про світ, історію, культуру та науку через наші статті!</p>
+    <div id="facts-list"></div>
   </div>
   <footer role="contentinfo">
     <div class="footer-left">
